--- a/bake-my-cake/src/app/custom/custom.component.html
+++ b/bake-my-cake/src/app/custom/custom.component.html
@@ -183,6 +183,16 @@
             </mat-form-field>
             <!-- <button mat-flat-button type="submit" color="primary" (click)="makeRequest()"
             [disabled]="!productForm.valid">Make Request</button> -->
+
+
         </form>
+        <div>
+            <button type="submit" class="btn">Submit</button>
+
+        </div>
+
+
+
+
     </div>
 </div>
