--- a/bake-my-cake/src/app/custom/custom.component.css
+++ b/bake-my-cake/src/app/custom/custom.component.css
@@ -9,9 +9,9 @@ h1 {
 }
 
 .hello {
-    padding: 10%;
-    width: 80%;
-    padding-left: 11%;
+    padding: 4%;
+    width: 70%;
+    padding-left: 15%;
 }
 
 
@@ -26,8 +26,8 @@ mat-form-field {
 form {
 
     padding-left: 10%;
-    margin-left: 20%;
-    margin-right: 25%;
+    margin-left: 15%;
+    margin-right: 20%;
 
 }
 
@@ -82,4 +82,40 @@ h2 {
 
 #image {
     border-radius: 25px;
+}
+
+.btn {
+    margin-top: 5%;
+    margin-left: 45%;
+    width: 9em;
+    height: 3em;
+    border-radius: 30em;
+    font-size: 15px;
+    font-family: inherit;
+    border: none;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    z-index: 1;
+    box-shadow: 6px 6px 12px #ff9292,
+        -6px -6px 12px #e7abff;
+}
+
+.btn::before {
+    content: '';
+    width: 0;
+    height: 3em;
+    border-radius: 30em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(to right, #fd8484 0%, #cfabfe 100%);
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
+
+}
+
+.btn:hover::before {
+    width: 9em;
 }
