--- a/bake-my-cake/src/app/footer/footer.component.css
+++ b/bake-my-cake/src/app/footer/footer.component.css
@@ -11,10 +11,10 @@ div {
 }
 
 img {
-    height: 25px;
-    width: 25px;
+    height: 30px;
+    width: 30px;
     padding-left: 20px;
-    padding-top: 10px;
+    padding-bottom: 7px;
 }
 
 .footer {
@@ -26,6 +26,6 @@ img {
 }
 
 h4 {
-    padding-top: 10px;
+    padding-top: 3px;
     padding-left: 280px;
 }
